2003-12-07  Zoltan Varga  <vargaz@freemail.hu>

	* Type.cs (MakeArrayType): Add argument checking.

2003-12-06  Dick Porter  <dick@ximian.com>

	* String.cs: Don't use CompareInfo for non-culture-sensitive
	IndexOf and LastIndexOf methods.

2003-12-06  Ravindra  <rkumar@novell.com>

	* DateTime.cs: Made Parse(string, IFormatProvider) method to
	use second argument. Fixed bug #51464.

2003-12-04  Martin Baulig  <martin@ximian.com>

	* Type.cs (Type.MakeArrayType): New public method.

2003-12-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Buffer.cs:
	(BlockCopy): make the exception thrown helpful.

2003-12-03  Dick Porter  <dick@ximian.com>

	* String.cs: Calling Replace on an empty string returns itself.

2003-12-03  Zoltan Varga  <vargaz@freemail.hu>

	* MonoType.cs: Get rid of get_type_info, use a separate icall for
	each property instead.

2003-12-02  Dick Porter  <dick@ximian.com>

	* Decimal.cs: Fix NumberFormatInfo lookup.  Patch by
	Mohammad DAMT (mdamt@cdl2000.com), fixes bug 51443.

2003-12-01  Dick Porter  <dick@ximian.com>

	* String.cs: Make Compare, IndexOf, LastIndexOf, StartsWith,
	Replace, ToLower, ToUpper and Equals use the correct CultureInfo.

2003-11-28  Dick Porter  <dick@ximian.com>

	* Type.cs: 
	* MonoType.cs: 
	* Enum.cs: 
	* Boolean.cs: Do string compares with the Invariant culture.

2003-11-27 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Array.cs: make the enumerator ICloneable

2003-11-27 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Decimal.cs (ToXXX): Call Convert.ToXXX.

2003-11-26  Zoltan Varga  <vargaz@freemail.hu>

	* AppDomain.cs: Applied patch from ztashev@openlinksw.co.uk (Zdravko Tashev). 
	Implement Load(byte[]) methods.

	* BadImageFormatException.cs: Fix ToString.

2003-11-24  Zoltan Varga  <vargaz@freemail.hu>

	* MonoType.cs: Make Standard|HasThis match Standard in GetMethod and
	GetConstructor, as done by MS.

2003-11-19  Andreas Nahr <ClassDevelopment@A-SoftTech.com>
